apps/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: apps
spec:
  selector:
    app: invidious
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: invidious-companion
  namespace: apps
spec:
  selector:
    app: invidious-companion
  ports:
    - name: http
      port: 8282
      targetPort: http
